version/0.13/_sources/api/solver/_autosummary/settings/graphics_objects.rst.txt
:orphan:

.. _graphics_objects:

graphics_objects
================

.. autoclass:: ansys.fluent.core.solver.settings_231.graphics_objects.graphics_objects

.. rubric:: Methods

==================   ===================

Method                           Summary

==================   ===================
:ref:`list <list>`       'list' command.

==================   ===================

.. rubric:: Named object type

:ref:`graphics_objects_child <graphics_objects_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`scene_child <scene_child>`       'child_object_type' of scene.

================================   =================================

