version/0.20/_sources/api/solver/_autosummary/settings/graphics_objects.rst.txt
:orphan:

.. _graphics_objects:

graphics_objects
================

.. autoclass:: ansys.fluent.core.solver.settings_241.graphics_objects.graphics_objects
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list_3>`                                                   'list' command.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`graphics_objects_child <graphics_objects_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`scene_child <scene_child>`       'child_object_type' of scene.

================================   =================================

